2004-11-21  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/Makefile.am:
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-context.h:
	* libseahorse/seahorse-default-key-control.c:
	* libseahorse/seahorse-key-store.c:
	* libseahorse/seahorse-key-store.h:
	* libseahorse/seahorse-multi-source.c:
	* libseahorse/seahorse-multi-source.h:
	* libseahorse/seahorse-recipients.c:
	* libseahorse/seahorse-recipients-store.c:
	* libseahorse/seahorse-recipients-store.h:
	* libseahorse/seahorse-signatures.c:
	* src/main.c:
	* src/seahorse-generate-adv.c:
	* src/seahorse-generate-druid.c:
	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager-store.c:
	* src/seahorse-key-manager-store.h: Refactor key sources and their
	use instead of the context for tracking and listing keys. (bug# 158882)
	
2004-11-20  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/Makefile.am: Fix broken build
	
2004-11-12  Nate Nielsen <nielsen@memberwebs.com>

	* libseahorse/seahorse-util.h:
	* libseahorse/seahorse-vfs-data.c: Add seahorse_util_wait_until
	macro so we can use it elsewhere
	* libseahorse/seahorse-operation.c:
	* libseahorse/seahorse-operation.h:
	* libseahorse/seahorse-pgp-source.c: Use a generic operation method
	for keeping track of asynchronous actions
	
2004-11-11  Nate Nielsen <nielsen@memberwebs.com>
	
	* data/seahorse.schemas.in:
	* libseahorse/Makefile.am:
	* libseahorse/seahorse-context.h:
	* libseahorse/seahorse-prefs.c:
	* libseahorse/seahorse-prefs.glade:
	* libseahorse/seahorse-prefs.h:
	* plugins/nautilus/Makefile.am:
	* plugins/seahorse-pgp-preferences.c:
	* src/seahorse-preferences.c: New shared preferences (bug# 157876)
	* plugins/nautilus/seahorse-pgp-preferences.glade: Removed
	* nautilus/plugins/seahorse-pgp-preferences-cache.c: Moved to 
	new location: libseahorse/seahorse-prefs-cache.c
	* libseahorse/seahorse-widget.c:
	* libseahorse/seahorse-widget.h: Added method for getting the top
	level widget from a SeahorseWidget 