@@ -1,5 +1,7 @@
 2004-11-21  Nate Nielsen <nielsen@memberwebs.com>
 
+	* plugins/gedit/seahorse-gedit.c: Bring gedit plugin in sync with 
+	prior refactoring changes. 
 	* libseahorse/Makefile.am:
 	* libseahorse/seahorse-context.c:
 	* libseahorse/seahorse-context.h:
